docs/examples/errors/error_observers/server_sdk/blueprint.ron
(
    creation_location: (
        line: 6,
        column: 18,
        file: "errors/error_observers/src/blueprint.rs",
    ),
    components: [
        error_observer((
            coordinates: (
                id: "EMIT_ERROR_LOG",
                created_at: (
                    package_name: "error_observers",
                    package_version: "0.1.0",
                ),
                macro_name: "error_observer",
            ),
            registered_at: (
                line: 7,
                column: 8,
                file: "errors/error_observers/src/blueprint.rs",
            ),
        )),
        error_observer((
            coordinates: (
                id: "ENRICH_ROOT_SPAN",
                created_at: (
                    package_name: "error_observers",
                    package_version: "0.1.0",
                ),
                macro_name: "error_observer",
            ),
            registered_at: (
                line: 9,
                column: 8,
                file: "errors/error_observers/src/blueprint.rs",
            ),
        )),
        import((
            sources: some([
                "crate",
            ]),
            relative_to: "error_observers::blueprint",
            created_at: (
                package_name: "error_observers",
                package_version: "0.1.0",
            ),
            registered_at: (
                line: 10,
                column: 8,
                file: "errors/error_observers/src/blueprint.rs",
            ),
        )),
        routes_import((
            sources: some([
                "crate",
            ]),
            relative_to: "error_observers::blueprint",
            created_at: (
                package_name: "error_observers",
                package_version: "0.1.0",
            ),
            registered_at: (
                line: 11,
                column: 8,
                file: "errors/error_observers/src/blueprint.rs",
            ),
        )),
    ],
)